# serializer version: 1
# name: test_add
  dict({
    'complete': False,
    'context': dict({
    }),
    'count': 0,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 0,
    'step': 'add_subtraction_files',
    'type': 'add_subtraction_files',
  })
# ---
# name: test_find
  list([
    Task(id=1, complete=True, created_at=datetime.datetime(2015, 10, 6, 20, 0), error=None, progress=100, step='download', type='clone_reference', context={'user_id': 'test_1'}, count=40, file_size=1024),
    Task(id=2, complete=False, created_at=datetime.datetime(2015, 10, 6, 20, 0), error=None, progress=80, step='download', type='import_reference', context={'user_id': 'test_2'}, count=30, file_size=14754),
  ])
# ---
# name: test_get
  dict({
    'complete': True,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 40,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'file_size': 1024,
    'id': 1,
    'progress': 100,
    'step': 'download',
    'type': 'clone_reference',
  })
# ---
# name: test_update[error][pg]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': 'failed_task',
    'file_size': None,
    'id': 1,
    'progress': 22,
    'step': 'one',
    'type': 'dummy_task',
  })
# ---
# name: test_update[error][return_value]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': 'failed_task',
    'file_size': None,
    'id': 1,
    'progress': 22,
    'step': 'one',
    'type': 'dummy_task',
  })
# ---
# name: test_update[progress][pg]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 55,
    'step': 'one',
    'type': 'dummy_task',
  })
# ---
# name: test_update[progress][return_value]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 55,
    'step': 'one',
    'type': 'dummy_task',
  })
# ---
# name: test_update[step][pg]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 22,
    'step': 'two',
    'type': 'dummy_task',
  })
# ---
# name: test_update[step][return_value]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 22,
    'step': 'two',
    'type': 'dummy_task',
  })
# ---
# name: test_update[step_progress][pg]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 55,
    'step': 'three',
    'type': 'dummy_task',
  })
# ---
# name: test_update[step_progress][return_value]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 55,
    'step': 'three',
    'type': 'dummy_task',
  })
# ---
